# GuoZiYi

./: .env  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
entity/: Cargo.toml
entity/src/: lib.rs  prelude.rs  route_names.rs  routes.rs  sessions.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20231222_021548_create_route_names.rs
src/: main.rs
src/entity/: actions.rs  mod.rs  prelude.rs  route_names.rs  routes.rs  sessions.rs
src/routes/: heartbeat.rs  mod.rs  process.rs  render.rs  token.rs
src/schedule/: clear_token.rs  mod.rs  refresh_tera.rs
src/service/: mod.rs  route.rs  session.rs  token.rs
src/utils/: app_state.rs  custom_errors.rs  get_seven_day.rs  mod.rs
templates/: routeitem.tera  routes.tera
