[package]
edition = "2021"
name = "guo_zi_yi"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.1"
chrono = "0.4.31"
dotenvy = "0.15.7"
redis = { version = "0.24.0", features = ["tokio-comp"] }
sea-orm = {version = "0.12.7", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"]}
tokio = {version = "1.34.0", features = ["full"]}
uuid = {version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"]}
