[package]
edition = "2021"
name = "guo_zi_yi"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.1"
chrono = "0.4.31"
dotenvy = "0.15.7"
redis = { version = "0.24.0", features = ["tokio-comp", "json"] }
redis-macros = "0.2.1"
sea-orm = { version = "0.12.7", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108" }
tera = "1.19.1"
tokio = { version = "1.34.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs

[workspace]
members = [".", "migration", "entity"]